Fix/vertical spacing (#160)
* adjusting height correctly

* button stays in the same spot

* remove commented out code

* remove ref

* fix bug

* Update src/components/PackingInput/index.tsx


* Update src/components/PackingInput/index.tsx


* re-order imports

* scroll within recipe container

* maintain height

* remove sider height

* uselayouteffect

* remove function

---------

--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,7 @@
 }
 
 .sider {
-    height: calc(
-        100vh - var(--header-height) - var(--footer-height)
-    ); /* full height minus header and footer */
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
     padding: 0 40px;
 }
 
