--- a/src/components/JSONViewer/style.css
+++ b/src/components/JSONViewer/style.css
@@ -6,7 +6,6 @@
 .full-recipe {
     display: flex;
     flex-direction: column;
-    border: 1px solid #d9d9d9;
     border-radius: 6px;
     font-size: 14px;
 }
@@ -20,5 +19,5 @@
     padding: 10px;
     font-size: 16px;
     font-weight: 600;
-    border-top: 0.5px solid;
+    border-top: 0.5px solid #d9d9d9;
 }
